test/errors/func_call_wrong_type.luv
# RET: 1
# ERR: {self}:9:11:    stuff(z)
# ERR: {ssss}                ^ error: Call argument 1 is type str, but function expects type i32.
def int stuff(int x):
    return 0

def int main():
    z = "hi"
    stuff(z)
